# Xli

./: .gitignore  CMakeLists.txt  build-android.bat  pack-android.sh
attic/include/: XliPlatform.h
attic/include/XliHttpClient/: HttpClient.h
attic/include/XliPlatform/: Application.h  InputEventHandler.h  Window.h  WindowEventHandler.h
attic/src/XliGL/: CMakeLists.txt
attic/src/XliMain/: CMakeLists.txt
attic/src/XliPlatform/: Application.cpp  Window.cpp
cmake/modules/: XliLibSetup.cmake  XliLinkProject.cmake
cmake/toolchain/: iOS.cmake
include/: Xli.h
include/Xli/: BufferStream.h  Config.h  Console.h  Exception.h  HashMap.h  String.h  TextWriter.h  Traits.h  Uri.h
include/XliGL/: GLContext.h
include/XliImage/: Jpeg.h  Png.h
include/XliPlatform/: Application.h  Display.h  EventHandler.h  InputEventHandler.h  Window.h  WindowEventHandler.h
include/XliPlatform/PlatformSpecific/: Android.h
src/Xli/: BufferStream.cpp  CMakeLists.txt  CoreLib.cpp  DateTime.cpp  String.cpp  Traits.cpp  Unicode.cpp
src/Xli/android/: AndroidFileSystem.cpp  AndroidJni.cpp  AndroidJni.h
src/Xli/linux/: XdgFileSystem.cpp
src/Xli/pthread/: PthreadThread.cpp
src/Xli/unix/: UnixFileSystemBase.h  UnixTime.cpp
src/Xli/win32/: Win32FileSystem.cpp  Win32Thread.cpp
src/XliGL/: CMakeLists.txt
src/XliImage/: CMakeLists.txt  JpegReader.cpp  PngReader.cpp  UIImageReader.mm
src/XliMain/: CMakeLists.txt  Main.cpp
src/XliPlatform/: Application.cpp  CMakeLists.txt  Window.cpp
src/XliSoundPlayer/: CMakeLists.txt
tests/Xli/: String_test.cpp
(+112 files in other folders)
